# hri_face_detect

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  setup.cfg  setup.py
doc/: mediapipe_face_mesh_2_ros4hri.md
hri_face_detect/: __init__.py  detect  face_pose_estimation.py  node_face_detect.py  one_euro_filter.py
include/libfacedetectcnn/: facedetectcnn.h
launch/: detect.launch  face_detect.launch.py
libfacedetection/src/: facedetectcnn-model.cpp
node/hri_face_detect/: detect
nodes/hri_face_detect/: detect  record
scripts/: detect
src/: yunet_detector.cpp
src/hri_face_detect/: face_pose_estimation.py  one_euro_filter.py  yunet_detector.cpp
src/libfacedetectcnn/: facedetectcnn-data.cpp  facedetectcnn-model.cpp  facedetectcnn.cpp
