<?xml version="1.0"?>
<package format="2">
  <name>hri_face_detect</name>
  <version>1.5.2</version>
  <description>Google Mediapipe-based face detection for ROS4HRI</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <maintainer email="luka.juricic@pal-robotics.com">Luka Juricic</maintainer>

  <license>BSD</license>

  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>
  <build_depend>pybind11-dev</build_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>pybind11_catkin</exec_depend>
  <exec_depend>pybind11-dev</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
